# AAS-FinalProj-PUD

./: .gitignore  README.md  app.py  crawl.py  crawler.sh  dockerfile  filter_js.py  main.py  pyproject.toml  requirements.txt  visualizations.py
browser_extension/: background.js  blocked.html  blocked.js  borderify.js  manifest.json  popup.html  popup.js
scripts/: filter_non_spam_by_majestic.py
src/: constants.py  knn_phishing_detector.py  models.py  phishing_url_detector.py  url_feature_extractor.py
src/ai_models/: __init__.py  base_phishing_detector.py  knn_detector.py  random_forest_detector.py
src/services/dataset_loader/: __init__.py  dataset_loader.py
visualizations/: metrics.json
