[project]
name = "aas-finalproj-pud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawlee[all]>=1.2.0",
    "flask>=3.1.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
]
